--- a/style.css
+++ b/style.css
@@ -1,22 +1,42 @@
-*{
-    margin: 0; 
-    padding: 0;
-    font-family: 'Poppins', sans-serif; 
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
-.container{
-    width: 100%;
-    height: 100vh;
-    background: #333;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+.container {
+  width: 100%;
+  height: 100vh;
+  background: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-.music-player{
-    background: #ffe0e5;
-    width: 400px;
-    padding: 25px 35px;
-    text-align: center; 
+.music-player {
+  background: #ffe0e5;
+  width: 400px;
+  padding: 25px 35px;
+  text-align: center;
 }
-
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+nav .circle {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  background: #fff;
+  color: #f53192;
+  box-shadow: 0 5px 10px rgba(255, 26, 2, 0.22);
+}
+.song-image {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(255, 26, 2, 0.22);
+}
