--- a/style.css
+++ b/style.css
@@ -33,10 +33,9 @@ nav .circle {
   color: #f53192;
   box-shadow: 0 5px 10px rgba(255, 26, 2, 0.22);
 }
-.song-image {
-  width: 100%;
-  height: 200px;
-  border-radius: 10px;
-  background: #fff;
-  box-shadow: 0 5px 10px rgba(255, 26, 2, 0.22);
+.song-img {
+  width: 220px;
+  border-radius: 50%;
+  border: 8px solid #fff;
+  box-shadow: 0 10px 60px rgba(255, 26, 26      , 0.22);
 }
